--- a/src/App.css
+++ b/src/App.css
@@ -11,44 +11,42 @@ h1 {
   3px 3px 1px #3743a4, 5px 3px 1px #3743a4, 4px 4px 1px #3743a4;
 }
 
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.about {
+  background-color: #28225d;
   color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  min-height: 75vh;
+  min-width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.about h2 {
+  text-decoration: underline;
+  font-size: 3rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about h2:hover {
+  color: #263b9c;
+}
+
+.about p {
+  font-size: 18px;
+  padding: 50px 100px;
+}
+
+.about-details {
+
+  justify-content: space-around;
+}
+
+.profile-img {
+  border-radius: 10%;
+  height: 10%;
+  width: 10%;
+  /* opacity: 75%; */
 }
 
 .header {
@@ -56,9 +54,10 @@ h1 {
   background-repeat: none;
   background-size: cover;
   color: white;
+  text-align: center;
   position: relative;
   min-height: 100vh;
-  width: 100vw;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
