Added Skills Section and Icons

--- a/src/App.css
+++ b/src/App.css
@@ -1,118 +1,156 @@
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
+    border: solid red 1px;
 }
 
 h1 {
-  font-size: 100px;
-  font-weight: 400;
-  text-transform: uppercase;
-  text-shadow: 3px 1px 1px #3743a4, 2px 2px 1px #3743a4, 4px 2px 1px #3743a4,
-  3px 3px 1px #3743a4, 5px 3px 1px #3743a4, 4px 4px 1px #3743a4;
+    font-size: 100px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-shadow: 3px 1px 1px #3743a4, 2px 2px 1px #3743a4, 4px 2px 1px #3743a4,
+        3px 3px 1px #3743a4, 5px 3px 1px #3743a4, 4px 4px 1px #3743a4;
 }
 
-.about {
-  background-color: #28225d;
-  color: white;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  min-height: 75vh;
-  min-width: 100vw;
+
+
+
+.about-container {
+    background-color: #28225d;
+    color: white;
+    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 75vh;
+    min-width: 100vw;
 }
 
-.about h2 {
-  text-decoration: underline;
-  font-size: 3rem;
-}
-
-.about h2:hover {
-  color: #263b9c;
-}
-
-.about p {
-  font-size: 18px;
-  padding: 50px 100px;
+@media (max-width: 576px) {
+  .pricing-container {
+    flex-direction: column;
+  }
 }
 
 .about-details {
-
-  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .profile-img {
-  border-radius: 10%;
-  height: 10%;
-  width: 10%;
-  /* opacity: 75%; */
+    border-radius: 10%;
+    min-height: auto;
+    min-width: 30vh;
+    flex: 1;
+}
+
+.about-container h2 {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.about-container h2:hover {
+    color: #263b9c;
+}
+
+.about-container p {
+    font-size: 18px;
+    padding: 50px 100px;
+    line-height: 1.5;
+    flex: 1;
 }
 
 .header {
-  background-image: url(./assets/space_aesthetic-wallpaper-1280x960.jpg);
-  background-repeat: none;
-  background-size: cover;
-  color: white;
-  text-align: center;
-  position: relative;
-  min-height: 100vh;
-  min-width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    background-image: url(./assets/space_aesthetic-wallpaper-1280x960.jpg);
+    background-repeat: none;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header-description {
-  align-items: center;
-  padding: 180px;
-  box-sizing: content-box;
+    align-items: center;
+    padding: 180px;
+    box-sizing: content-box;
 }
 
 .header-description p {
-  font-size: 36px;
-  /* font-weight: 500; */
-  text-shadow: 2px 1px 1px #263b9c, 2px 1px 1px #3743a4, 4px 2px 1px #9d97e4;
+    font-size: 36px;
+    /* font-weight: 500; */
+    text-shadow: 2px 1px 1px #263b9c, 2px 1px 1px #3743a4, 4px 2px 1px #9d97e4;
 }
 
 .navigation {
-  font-size: 28px;
-  align-items: flex-start;
-  text-decoration: none;
+    font-size: 28px;
+    align-items: flex-start;
+    text-decoration: none;
 }
 
 .nav-link {
-  color: white;
+    color: white;
 }
-
 
 /* Button Styling */
 .btn {
-  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  flex-shrink: 0;
-  align-items: flex-end;
-  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  height: 4rem;
-  padding: 0 1.6rem;
-  text-align: center;
-  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-  transition: all .5s;
+    background-image: linear-gradient(
+        92.88deg,
+        #455eb5 9.16%,
+        #5643cc 43.89%,
+        #673fd7 64.72%
+    );
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    flex-shrink: 0;
+    align-items: flex-end;
+    font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    height: 4rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all 0.5s;
+    margin-bottom: 200px;
 }
 
 .btn:hover {
-  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: .1s;
+    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+    transition-duration: 0.1s;
 }
 
 @media (min-width: 768px) {
-  .btn {
-    padding: 0 2.6rem;
-  }
+    .btn {
+        padding: 0 2.6rem;
+    }
+}
+
+.skills-container {
+  background-color: #161c38;
+  color: white;
+  height: 75vh;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: center; 
+  gap: 10px;
+}
+
+.skills-container h2 {
+  align-self: flex-start;
+}
+
+.skill {
+  flex-basis: 200px;
 }
