Adjusted layout of heading and nav at tablet size and down

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    border: solid red 1px;
+    /* border: solid red 1px; */
 }
 
 h1 {
@@ -12,7 +12,7 @@ h1 {
         3px 3px 1px #3743a4, 5px 3px 1px #3743a4, 4px 4px 1px #3743a4;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     h1 {
         font-size: 72px;
     }
@@ -39,7 +39,7 @@ h1 {
     box-sizing: content-box;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     .header-description {
         padding: 100px;
     }
@@ -51,16 +51,25 @@ h1 {
     text-shadow: 2px 1px 1px #263b9c, 2px 1px 1px #3743a4, 4px 2px 1px #9d97e4;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     .header-description p {
         font-size: 24px;
     }
 }
 
+/* Navigation Links */
 .navigation {
     font-size: 28px;
-    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .navigation {
+        font-size: 20px;
+    }
 }
 
 .nav-link {
