--- a/src/App.css
+++ b/src/App.css
@@ -255,8 +255,8 @@ h1 {
 
 /* Footer */
 footer {
-    background-color: #28225d;
-    color: black;
+    background-color: #161c38;
+    color: white;
     height: 20vh;
     display: flex;
     justify-content: center;
