--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 * {
     padding: 0;
     margin: 0;
-    /* border: solid red 1px; */
+    box-sizing: border-box;
+    border: solid red 1px;
 }
 
 h1 {
@@ -121,7 +122,7 @@ h1 {
     text-align: center;
     display: flex;
     flex-direction: row;
-    min-height: 75vh;
+    min-height: 90vh;
     max-width: 100vw;
     gap: 20px;
 }
@@ -138,12 +139,14 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 60vw;
 }
 
 .profile-img {
     border-radius: 10%;
-    max-height: 50vh;
-    min-width: 30vh;
+    max-height: 80vh;
+    min-width: 30vh; 
+    object-fit: contain;
     flex: 1;
     align-self: center;
     margin-left: 20px;
@@ -208,7 +211,7 @@ h1 {
 .skills-container {
     background-color: #161c38;
     color: white;
-    height: 75vh;
+    height: 90vh;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -238,6 +241,7 @@ h1 {
 .programming-img {
     height: 200px;
     width: 225px;
+    object-fit: cover;
 }
 
 /* Projects */
