--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ h1 {
 }
 
 .about-container h2 {
-    font-size: 4rem;
+    font-size: 4.5rem;
     line-height: 1.5;
 }
 
@@ -215,7 +215,7 @@ h1 {
     text-align: center;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-content: center;
     flex-wrap: wrap;
     gap: 20px
@@ -223,7 +223,7 @@ h1 {
 }
 
 .skills-heading {
-    font-size: 4rem;
+    font-size: 4.5rem;
     flex-basis: 100%;
 }
 
