--- a/src/App.css
+++ b/src/App.css
@@ -87,16 +87,14 @@ h1 {
     );
     border-radius: 8px;
     border-style: none;
-    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: #ffffff;
     cursor: pointer;
-    flex-shrink: 0;
-    align-items: flex-end;
     font-family: "Roboto", "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 18px;
     font-weight: 500;
     height: 4rem;
-    padding: 0 1.6rem;
+    padding: 0 1.8rem;
     text-align: center;
     text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
     transition: all 0.5s;
