--- a/src/App.css
+++ b/src/App.css
@@ -1,291 +1,294 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    /* border: solid red 1px; */
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* border: solid red 1px; */
 }
 
 h1 {
-    font-size: 100px;
-    font-weight: 400;
-    text-transform: uppercase;
-    text-shadow: 3px 1px 1px #3743a4, 2px 2px 1px #3743a4, 4px 2px 1px #3743a4,
-        3px 3px 1px #3743a4, 5px 3px 1px #3743a4, 4px 4px 1px #3743a4;
+  font-size: 100px;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-shadow: 3px 1px 1px #3743a4, 2px 2px 1px #3743a4, 4px 2px 1px #3743a4,
+    3px 3px 1px #3743a4, 5px 3px 1px #3743a4, 4px 4px 1px #3743a4;
 }
 
 @media (max-width: 768px) {
-    h1 {
-        font-size: 72px;
-    }
+  h1 {
+    font-size: 72px;
+  }
 }
 
 /* Header Section */
 .header {
-    background-image: url(./assets/space_aesthetic-wallpaper-1280x960.jpg);
-    background-repeat: none;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    position: relative;
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-image: url(./assets/space_aesthetic-wallpaper-1280x960.jpg);
+  background-repeat: none;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header-description {
-    align-items: center;
-    padding: 180px;
-    box-sizing: content-box;
+  align-items: center;
+  padding: 180px;
+  box-sizing: content-box;
 }
 
 @media (max-width: 768px) {
-    .header-description {
-        padding: 100px;
-    }
+  .header-description {
+    padding: 100px;
+  }
 }
 
 .header-description p {
-    font-size: 36px;
-    /* font-weight: 500; */
-    text-shadow: 2px 1px 1px #263b9c, 2px 1px 1px #3743a4, 4px 2px 1px #9d97e4;
+  font-size: 36px;
+  /* font-weight: 500; */
+  text-shadow: 2px 1px 1px #263b9c, 2px 1px 1px #3743a4, 4px 2px 1px #9d97e4;
 }
 
 @media (max-width: 768px) {
-    .header-description p {
-        font-size: 24px;
-    }
+  .header-description p {
+    font-size: 24px;
+  }
 }
 
 /* Navigation Links */
 .navigation {
-    font-size: 28px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    text-decoration: none;
+  font-size: 28px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  text-decoration: none;
 }
 
 @media (max-width: 768px) {
-    .navigation {
-        font-size: 20px;
-    }
+  .navigation {
+    font-size: 20px;
+  }
 }
 
 .nav-link {
-    color: white;
+  color: white;
 }
 
 /* Button Styling */
 .header-btn {
-    background-image: linear-gradient(
-        92.88deg,
-        #455eb5 9.16%,
-        #5643cc 43.89%,
-        #673fd7 64.72%
-    );
-    border-radius: 8px;
-    border-style: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    color: #ffffff;
-    cursor: pointer;
-    font-family: "Roboto", "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    height: 4rem;
-    padding: 0 1.8rem;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-    transition: all 0.5s;
-    margin-bottom: 200px;
+  background-image: linear-gradient(
+    92.88deg,
+    #455eb5 9.16%,
+    #5643cc 43.89%,
+    #673fd7 64.72%
+  );
+  border-radius: 8px;
+  border-style: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  cursor: pointer;
+  font-family: "Roboto", "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  height: 4rem;
+  padding: 0 1.8rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all 0.5s;
+  margin-bottom: 200px;
 }
 
 .header-btn:hover {
-    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-    transition-duration: 0.1s;
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: 0.1s;
 }
 
 @media (max-width: 576px) {
-    .header-btn {
-        padding: 0 1.6rem;
-        margin-bottom: 100px;
-    }
+  .header-btn {
+    padding: 0 1.6rem;
+    margin-bottom: 100px;
+  }
 }
 
 /* About Section */
 .about-container {
-    background-color: #28225d;
-    color: white;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    min-height: 90vh;
-    max-width: 100vw;
-    gap: 20px;
+  background-color: #28225d;
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  min-height: 90vh;
+  max-width: 100vw;
+  gap: 20px;
 }
 
 @media (max-width: 576px) {
-    .about-container {
-        flex-direction: column;
-        padding: 30px 0;
-    }
+  .about-container {
+    flex-direction: column;
+    padding: 30px 0;
+  }
 }
 
 .about-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 60vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60vw;
 }
 
 .profile-img {
-    /* border-radius: 10%; */
-    max-height: 80vh;
-    min-width: 30vh; 
-    object-fit: contain;
-    flex: 1;
-    align-self: center;
-    margin-left: 20px;
+  /* border-radius: 10%; */
+  max-height: 80vh;
+  min-width: 30vh;
+  object-fit: contain;
+  flex: 1;
+  align-self: center;
+  margin-left: 20px;
 }
 
 @media (max-width: 576px) {
-    .profile-img {
-        margin: 0 auto;
-    }
+  .profile-img {
+    margin: 0 auto;
+  }
 }
 
 .about-container h2 {
-    font-size: 4.5rem;
-    line-height: 1.5;
+  font-size: 4.5rem;
+  line-height: 1.5;
 }
 
 .about-container h2:hover {
-    color: #263b9c;
+  color: #263b9c;
 }
 
 .about-container p {
-    font-size: 18px;
-    padding: 50px 50px;
-    line-height: 1.5;
+  font-size: 18px;
+  padding: 50px 50px;
+  line-height: 1.5;
 }
 
 .about-btn {
-    background-image: linear-gradient(
-        92.88deg,
-        #455eb5 9.16%,
-        #5643cc 43.89%,
-        #673fd7 64.72%
-    );
-    border-radius: 8px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-family: "Roboto", "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    height: 4rem;
-    padding: 0 0.75rem;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-    transition: all 0.5s;
+  background-image: linear-gradient(
+    92.88deg,
+    #455eb5 9.16%,
+    #5643cc 43.89%,
+    #673fd7 64.72%
+  );
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Roboto", "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  height: 4rem;
+  padding: 0 0.75rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all 0.5s;
 }
 
 .about-btn:hover {
-    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-    transition-duration: 0.1s;
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: 0.1s;
 }
 
 @media (min-width: 768px) {
-    .about-btn {
-        padding: 0 1.6rem;
-    }
+  .about-btn {
+    padding: 0 1.6rem;
+  }
 }
 
 /* Skills */
 .skills-container {
-    background-color: #161c38;
-    color: white;
-    height: 90vh;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-content: center;
-    flex-wrap: wrap;
-    gap: 20px
-
+  background-color: #161c38;
+  color: white;
+  /* color: black; */
+  /* color: #161c38; */
+  height: 90vh;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .skills-heading {
-    font-size: 4.5rem;
-    flex-basis: 100%;
+  font-size: 4.5rem;
+  flex-basis: 100%;
 }
-
 
 .skills-heading:hover {
-    color: #263b9c;
+  color: #263b9c;
 }
 
-
 .skills-list {
-    display: flex;
-    flex-flow: row wrap;
-    align-content: center;
-    gap: 20px;
-    max-width: 40vw;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: center;
+  gap: 20px;
+  max-width: 40vw;
 }
 
 .skill {
-    flex: 1 1 25%;
-    background-image: linear-gradient(
-        92.88deg,
-        #455eb5 9.16%,
-        #5643cc 43.89%,
-        #673fd7 64.72%
-    );
-    /* color: hsl(227, 100%, 54%); */
-    /* color: 	hsl(256, 100%, 55%) */
-    /* color: hsl(317 100% 54%); */
-    text-shadow: 0 0 1em white
+  flex: 1 1 25%;
+  background-image: linear-gradient(
+    92.88deg,
+    #455eb5 9.16%,
+    #5643cc 43.89%,
+    #673fd7 64.72%
+  );
+  /* color: hsl(227, 100%, 54%); */
+  /* color: 	hsl(256, 100%, 55%) */
+  /* color: hsl(317 100% 54%); */
+  text-shadow: 0 0 1em white;
+}
+
+.skill:hover {
+  transform: scale(1.1, 1.1);
 }
 
 .programming-img {
-    max-height: 50vh;
-    max-width: 50vw;
-    min-width: 40vw;
-    object-fit: cover;
-    border-radius: 5%;
+  max-height: 50vh;
+  max-width: 50vw;
+  min-width: 40vw;
+  object-fit: cover;
+  border-radius: 5%;
 }
 
 /* Projects */
 .project-container {
-    background-color: #28225d;
-    color: white;
-    height: 75vh;
+  background-color: #28225d;
+  color: white;
+  height: 75vh;
 }
 
 /* Contact */
 .contact-container {
-    background-color: #161c38;
-    color: white;
+  background-color: #161c38;
+  color: white;
 }
 
 /* Footer */
 footer {
-    background-color: #161c38;
-    color: white;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: #161c38;
+  color: white;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
+  list-style: none;
+  display: flex;
+  gap: 20px;
 }
