--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,6 @@ h1 {
 }
 
 .profile-img {
-  /* border-radius: 10%; */
   max-height: 80vh;
   min-width: 30vh;
   object-fit: contain;
@@ -149,6 +148,17 @@ h1 {
   align-self: center;
   margin-left: 20px;
 }
+
+/* .profile-img {
+  max-height: 450px;
+  min-width: 200px;
+  max-width: 300px;
+  object-fit: contain;
+  flex: 1;
+  align-self: center;
+  margin-left: 20px;
+  border-radius: 10%;
+} */
 
 @media (max-width: 576px) {
   .profile-img {
@@ -268,13 +278,60 @@ h1 {
 .project-container {
   background-color: #28225d;
   color: white;
-  height: 75vh;
+  height: 175vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 50px 0;
 }
 
-/* Contact */
-.contact-container {
-  background-color: #161c38;
-  color: white;
+.projects {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+}
+
+.projects-heading {
+  font-size: 4.5rem;
+}
+
+.projects-heading:hover {
+  color: #263b9c;
+}
+.project {
+  height: 400px;
+  width: 400px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.project a {
+  color: white
+}
+
+.project p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+.project-img-wide {
+  object-fit: fill;
+  height: 250px;
+  width: 400px;
+}
+
+.project-img-tall {
+  object-fit: fill;
+  height: 250px;
+  width: 125px;
+  border-radius: 15px;
+  align-self: center;
 }
 
 /* Footer */
